k8s/base/backend-storage-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetflow-backend-storage-demo
  labels:
    app: assetflow-backend-storage-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetflow-backend-storage-demo
  template:
    metadata:
      labels:
        app: assetflow-backend-storage-demo
    spec:
      serviceAccountName: assetflow-backend-sa
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/ayshrosine/assetflow-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: assetflow-uploads-pvc
